setup builder for module relative, setup api create, prepare connect auth service to create relatives account, setup utils func to fetch api from other service
