# docs/swagger.json
@@ -6,6 +6,45 @@
         "version": "1.0"
     },
     "paths": {
+        "/api/v1/relatives": {
+            "post": {
+                "description": "create relatives account",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "relative"
+                ],
+                "summary": "create relatives account",
+                "parameters": [
+                    {
+                        "description": "account creation data",
+                        "name": "form",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/relativescommands.CreateRelativeAccountCmdDTO"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "data",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request error",
+                        "schema": {}
+                    }
+                }
+            }
+        },
         "/ping": {
             "get": {
                 "description": "ping server",
@@ -31,6 +70,40 @@
                         "description": "Bad request error",
                         "schema": {}
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "relativescommands.CreateRelativeAccountCmdDTO": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "city": {
+                    "type": "string"
+                },
+                "district": {
+                    "type": "string"
+                },
+                "dob": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "full-name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "phone-number": {
+                    "type": "string"
+                },
+                "ward": {
+                    "type": "string"
                 }
             }
         }
